--- a/apps/prepopulate/app_prepopulate_data.json
+++ b/apps/prepopulate/app_prepopulate_data.json
@@ -423,15 +423,79 @@
             "display_name": "Subscriber Types",
             "type": "unmanageable",
             "items": [
-                {"is_active": true, "name": "Digital/Internet", "qcode": "digital",
-                    "formats": [{"name": "NINJS", "qcode": "ninjs"}, {"name": "AAP NewsML 1.2", "qcode": "newsml12"}, {"name": "NewsML G2", "qcode": "newsmlg2"},
-                                {"name": "AAP Bulletin Builder", "qcode": "AAP BULLETIN BUILDER"}]},
-                {"is_active": true, "name": "Wire/Paper", "qcode": "wire",
-                    "formats": [{"name": "AAP ANPA", "qcode": "AAP ANPA"}, {"name": "NITF", "qcode": "nitf"}, {"name": "AAP IPNEWS", "qcode": "AAP IPNEWS"},
-                                {"name": "AAP SMS", "qcode": "AAP SMS"}]},
-                {"is_active": true, "name": "Broadcast", "qcode": "broadcast",
-                    "formats": [{"name": "AAP ANPA", "qcode": "AAP ANPA"}, {"name": "NITF", "qcode": "nitf"}, {"name": "AAP IPNEWS", "qcode": "AAP IPNEWS"},
-                                {"name": "AAP SMS", "qcode": "AAP SMS"}, {"name": "AAP NEWSCENTRE", "qcode": "AAP NEWSCENTRE"}]}
+                {
+                    "is_active": true,
+                    "name": "Digital/Internet",
+                    "qcode": "digital",
+                    "formats": [
+                        {
+                            "name": "NINJS",
+                            "qcode": "ninjs"
+                        },
+                        {
+                            "name": "AAP NewsML 1.2",
+                            "qcode": "newsml12"
+                        },
+                        {
+                            "name": "NewsML G2",
+                            "qcode": "newsmlg2"
+                        },
+                        {
+                            "name": "AAP Bulletin Builder",
+                            "qcode": "AAP BULLETIN BUILDER"
+                        }
+                    ]
+                },
+                {
+                    "is_active": true,
+                    "name": "Wire/Paper",
+                    "qcode": "wire",
+                    "formats": [
+                        {
+                            "name": "AAP ANPA",
+                            "qcode": "AAP ANPA"
+                        },
+                        {
+                            "name": "NITF",
+                            "qcode": "nitf"
+                        },
+                        {
+                            "name": "AAP IPNEWS",
+                            "qcode": "AAP IPNEWS"
+                        },
+                        {
+                            "name": "AAP SMS",
+                            "qcode": "AAP SMS"
+                        }
+                    ]
+                },
+                {
+                    "is_active": true,
+                    "name": "Broadcast",
+                    "qcode": "broadcast",
+                    "formats": [
+                        {
+                            "name": "AAP ANPA",
+                            "qcode": "AAP ANPA"
+                        },
+                        {
+                            "name": "NITF",
+                            "qcode": "nitf"
+                        },
+                        {
+                            "name": "AAP IPNEWS",
+                            "qcode": "AAP IPNEWS"
+                        },
+                        {
+                            "name": "AAP SMS",
+                            "qcode": "AAP SMS"
+                        },
+                        {
+                            "name": "AAP NEWSCENTRE",
+                            "qcode": "AAP NEWSCENTRE"
+                        }
+                    ]
+                }
             ]
         },
 		"resource": "vocabularies",
